--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -1,8 +1,6 @@
 <div class="container categories-container">
-    <div class="categories-box">
-<button class="categories-btn">All categories</button>
-<ul class="categories-wrapper">
-    
-</ul>
-</div>
+  <div class="categories-box">
+    <button class="categories-btn">All categories</button>
+    <ul class="categories-wrapper"></ul>
+  </div>
 </div>
