--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -1,55 +1,74 @@
 <div class="container filters-container">
   <div class="filters-main-box">
-  <form class="filters-form" action="">
-      <label class="filters-label-search" for="search"><span class="filters-span-search">Search</span>
-          <svg class="filters-icon" width="18" height="18">
-              <use href="../img/symbol-defs.svg#icon-search"></use>
-          </svg>
-          <input class="filters-input" type="text" id="search" name="search" placeholder="Enter Text">
+    <form class="filters-form" action="">
+      <label class="filters-label-search" for="search"
+        ><span class="filters-span-search">Search</span>
+        <svg class="filters-icon" width="18" height="18">
+          <use href="../img/symbol-defs.svg#icon-search"></use>
+        </svg>
+        <input
+          class="filters-input"
+          type="text"
+          id="search"
+          name="search"
+          placeholder="Enter Text"
+        />
       </label>
       <div class="filters-box-time-area">
-      <label class="filters-label-time" for="time"><span class="filters-span-time">Time</span>
+        <label class="filters-label-time" for="time"
+          ><span class="filters-span-time">Time</span>
           <select class="filters-select-time" name="time" id="time">
-              <option value="5">5 min</option>
-  <option value="10">10 min</option>
-  <option value="15">15 min</option>
-  <option value="20">20 min</option>
-  <option value="25">25 min</option>
-  <option value="30">30 min</option>
-  <option value="35">35 min</option>
-  <option value="40">40 min</option>
-  <option value="45">45 min</option>
-  <option value="50">50 min</option>
-  <option value="55">55 min</option>
-  <option value="60">60 min</option>
-  <option value="65">65 min</option>
-  <option value="70">70 min</option>
-  <option value="75">75 min</option>
-  <option value="80">80 min</option>
-  <option value="85">85 min</option>
-  <option value="90">90 min</option>
-  <option value="95">95 min</option>
-  <option value="100">100 min</option>
-  <option value="105">105 min</option>
-  <option value="110">110 min</option>
-  <option value="115">115 min</option>
-  <option value="120">120 min</option>
+            <option value="5">0 min</option>
+            <option value="10">10 min</option>
+            <option value="15">15 min</option>
+            <option value="20">20 min</option>
+            <option value="25">25 min</option>
+            <option value="30">30 min</option>
+            <option value="35">35 min</option>
+            <option value="40">40 min</option>
+            <option value="45">45 min</option>
+            <option value="50">50 min</option>
+            <option value="55">55 min</option>
+            <option value="60">60 min</option>
+            <option value="65">65 min</option>
+            <option value="70">70 min</option>
+            <option value="75">75 min</option>
+            <option value="80">80 min</option>
+            <option value="85">85 min</option>
+            <option value="90">90 min</option>
+            <option value="95">95 min</option>
+            <option value="100">100 min</option>
+            <option value="105">105 min</option>
+            <option value="110">110 min</option>
+            <option value="115">115 min</option>
+            <option value="120">120 min</option>
           </select>
+        </label>
+        <label class="filters-label-area" for="area"
+          ><span class="filters-span-area">Area</span>
+          <select class="filters-select-area" name="area" id="area">
+            <option value="">Region</option>
+          </select>
+        </label>
+      </div>
+      <label class="filters-label-ingredients" for="ingredients"
+        ><span class="filters-span-ingredients">Ingredients</span>
+        <select
+          class="filters-select-ingredients"
+          name="ingredients"
+          id="ingredients"
+        >
+          <option value="">Product</option>
+        </select>
       </label>
-      <label class="filters-label-area" for="area"><span class="filters-span-area">Area</span>
-          <select class="filters-select-area" name="area" id="area"></select>
-      </label>
-  </div>
-      <label class="filters-label-ingredients" for="ingredients"><span class="filters-span-ingredients">Ingredients</span>
-          <select class="filters-select-ingredients" name="ingredients" id="ingredients"></select>
-      </label>
-     
-  </form>
+    </form>
 
-  <div class="filters-dox-cards">
-       <button class="filters-reset-btn"><svg class="filters-icon-reset">
-          <use href="../img/symbol-defs.svg#icon-cross"></use>
-      </svg><span class="filters-btn-span">Reset the filter</span></button>
+    <div class="filters-dox-cards">
+      <button class="filters-reset-btn">
+        <svg class="filters-icon-reset">
+          <use href="../img/symbol-defs.svg#icon-cross"></use></svg
+        ><span class="filters-btn-span">Reset the filter</span>
+      </button>
       <div class="filters-box-parent"></div>
       <!-- <div class="filters-box-child">
           <svg class="filters-icon-heart">
@@ -77,6 +96,6 @@
           <button class="filters-btn-recipe" type="button">See recipe</button>
       </div>
       </div> -->
+    </div>
   </div>
-</div>
 </div>
