--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -61,7 +61,7 @@
         </svg>
         <p class="no-results-text">Sorry, but no recipes were found matching your filters. Please select other filters</p>
     </div>
-    <span class="loader"></span>
+    <span class="loader" hidden></span>
       <div class="filters-box-parent">
        
         </div>
