--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -10,7 +10,7 @@
       <div class="filters-box-time-area">
       <label class="filters-label-time" for="time"><span class="filters-span-time">Time</span>
           <select class="filters-select-time" name="time" id="time">
-            <option value="Select time">Select time</option>
+            <option value="Select time">Min</option>
               <option value="5">5 min</option>
   <option value="10">10 min</option>
   <option value="15">15 min</option>
@@ -39,13 +39,13 @@
       </label>
       <label class="filters-label-area" for="area"><span class="filters-span-area">Area</span>
           <select class="filters-select-area" name="area" id="area">
-            <option value="Select area">Select area</option>
+            <option value="Select area">Region</option>
           </select>
       </label>
   </div>
       <label class="filters-label-ingredients" for="ingredients"><span class="filters-span-ingredients">Ingredients</span>
           <select class="filters-select-ingredients" name="ingredients" id="ingredients">
-            <option value="Select ingedients">Select ingedients</option>
+            <option value="Select ingedients">Product</option>
           </select>
       </label>
      
