Makes rating modal functional

--- a/src/partials/modal-rating.html
+++ b/src/partials/modal-rating.html
@@ -1,4 +1,4 @@
-<div class="add-rating-backdrop">
+<!-- <div class="add-rating-backdrop">
   <div class="add-rating-modal">
     <svg
       id="add-rating-close-btn"
@@ -41,4 +41,4 @@
       <button type="submit" class="add-rating-submit-btn">Send</button>
     </form>
   </div>
-</div>
+</div> -->
