--- a/src/css/modal-rating.css
+++ b/src/css/modal-rating.css
@@ -18,7 +18,11 @@
   background-color: #fff;
   max-width: 335px;
   border-radius: 15px;
+
+  margin-left: auto;
+  margin-right: auto;
 }
+
 .add-rating-close-icon {
   position: absolute;
   top: 14px;
@@ -82,7 +86,7 @@
 }
 @media screen and (min-width: 768px) {
   .add-rating-modal {
-    max-width: 424px;
+    max-width: 531px;
     padding: 32px;
   }
   .add-rating-close-icon {
