--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
       <a class="header-link-nav" href="./index.html">Home</a>
         </li>
         <li class="header-nav">
-          <a class="header-link-nav" href="./favorites.html">Favorites</a>
+          <a class="header-link-nav-next" href="./favorites.html">Favorites</a>
         </li>
       </ul>
     <a class="header-logo" href="./index.html"><span class="header-logo-acent">tasty</span>treats.</a>
@@ -23,7 +23,7 @@
 </div>
 
 <label class="checkbox-ios-desktop">
-  <input type="checkbox">
+  <input type="checkbox" id="checkbox-btn">
   <span class="checkbox-ios-switch"></span>
 </label>
 
@@ -45,13 +45,14 @@
       </li>
     </ul>
     <label class="checkbox-ios">
-        <input type="checkbox">
+        <input type="checkbox" id="checkbox-btn">
         <span class="checkbox-ios-switch"></span>
     </label>
 </div>
 </div>
   </div>
 </div>
+
 
 <!-- ---------------------------------------------------------------TABLET AND DESKTOP -->
 
