--- a/src/css/base.css
+++ b/src/css/base.css
@@ -15,6 +15,11 @@ body {
   font-size: 14px;
   background-color: var(--boody-bg);
 }
+.dark body{
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+  background-color: var(--dark-boody-bg);
+}
 
   /* Reset styles */
   h1,
@@ -40,6 +45,9 @@ body {
     outline: transparent;
   }
   
+  .dark a{
+    color:  var(--dark-description-font-color) ;
+  }
   button {
     font-family: inherit;
     cursor: pointer;
