Adds modal rating close button

--- a/src/partials/modal-recipe.html
+++ b/src/partials/modal-recipe.html
@@ -106,14 +106,11 @@
   <!--------------RATING MODAL-------------->
 
   <div class="add-rating-modal" id="rating-modal" data-hidden>
-    <svg
-      id="add-rating-close-btn"
-      class="add-rating-close-icon"
-      width="20"
-      height="20"
-    >
-      <use href="/img/symbol-defs.svg#icon-close-x"></use>
-    </svg>
+    <button class="add-rating-close-btn">
+      <svg class="add-rating-close-img">
+        <use href="../img/symbol-defs.svg#icon-cross"></use>
+      </svg>
+    </button>
     <h3 class="add-rating-title">Rating</h3>
 
     <form class="add-rating-form">
