--- a/src/css/modal-rating.css
+++ b/src/css/modal-rating.css
@@ -43,8 +43,8 @@
 } */
 .add-rating-modal {
   position: relative;
-  /* padding: 20px;
-  top: 50%;
+  padding: 20px;
+  /* top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); */
   background-color: #fff;
