--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -55,13 +55,13 @@
        <button class="filters-reset-btn"><svg class="filters-icon-reset">
           <use href="./img/symbol-defs.svg#icon-cross"></use>
       </svg><span class="filters-btn-span">Reset the filter</span></button>
-      <div class="no-results">
+      <div class="no-results visually-hidden">
         <svg class="no-results-icon">
             <use href="./img/symbol-defs.svg#icon-nothing"></use>
         </svg>
         <p class="no-results-text">Sorry, but no recipes were found matching your filters. Please select other filters</p>
     </div>
-    <span class="loader" hidden></span>
+    <span class="loader"></span>
       <div class="filters-box-parent">
        
         </div>
