--- a/src/partials/favorit-images.html
+++ b/src/partials/favorit-images.html
@@ -4,17 +4,16 @@
     </div>
 </section>
 <section class="container favorit-gallary-full favorit-gallary">
-    <ul class="categories-gallery">
+    <ul class="categories-gallery favorit-gallary-full">
     </ul>
 </section>
-<section class="container favorit-gallary-null" hidden>
 
+<section class="container favorit-gallary-null">
     <svg class="icon-nothing">
-        <use href="../img/symbol-defs.svg#icon-nothing"></use>
+        <use href="./img/symbol-defs.svg#icon-nothing"></use>
     </svg>
     <p class="text-nothing">It appears that you haven't added any recipes to your favorites yet. To get started, you
         can add recipes that
         you like
         to your favorites for easier access in the future.</p>
-
 </section>
