--- a/src/partials/modal-order.html
+++ b/src/partials/modal-order.html
@@ -1,46 +1,55 @@
-<div class="modal">
-  <button type="button" class="modal-button-close" data-modal-close>
-    <svg class="modal-button-close-svg" width="24" height="24">
-      <use href="./img/symbol-defs.svg#icon-cross"></use>
-    </svg>
-  </button>
+<div class="modal-order-backdrop" data-hidden>
+  <div class="modal">
+    <button type="button" class="modal-button-close" data-modal-close>
+      <svg class="modal-button-close-svg" width="24" height="24">
+        <use href="./img/symbol-defs.svg#icon-cross"></use>
+      </svg>
+    </button>
 
-  <p class="contacts-input-form-paragraf">ORDER NOW</p>
+    <p class="contacts-input-form-paragraf">ORDER NOW</p>
 
-  <form class="contacts-input-form">
-    <label class="modal-input-labels"
-      ><span class="modal-input-labels-text">Name</span>
-      <input
-        type="text"
-        name="username"
-        class="input-style"
-        required minlength="2"
+    <form class="contacts-input-form">
+      <label class="modal-input-labels"
+        ><span class="modal-input-labels-text">Name</span>
+        <input
+          type="text"
+          name="username"
+          class="input-style"
+          required
+          minlength="2"
           pattern="^[a-zA-Z]+$"
-      />
-    </label>
+        />
+      </label>
 
-    <label class="modal-input-labels"
-      ><span class="modal-input-labels-text">Phone</span>
-      <input type="phone" name="userphone" class="input-style" required pattern="\+380[0-9]{9}"
-       />
-    </label>
+      <label class="modal-input-labels"
+        ><span class="modal-input-labels-text">Phone</span>
+        <input
+          type="phone"
+          name="userphone"
+          class="input-style"
+          required
+          pattern="\+380[0-9]{9}"
+        />
+      </label>
 
-    <label class="modal-input-labels"
-      ><span class="modal-input-labels-text">Email</span>
-      <input type="email" name="usermail" class="input-style" required />
-    </label>
+      <label class="modal-input-labels"
+        ><span class="modal-input-labels-text">Email</span>
+        <input type="email" name="usermail" class="input-style" required />
+      </label>
 
-    <label class="modal-input-textarea-label"
-      ><span class="modal-input-labels-text">Comment</span>
-      <textarea
-        name="comment"
-        placeholder=""
-        class="textarea-style"
-        rows="5"
-        required minlength="2"
-      ></textarea>
-    </label>
+      <label class="modal-input-textarea-label"
+        ><span class="modal-input-labels-text">Comment</span>
+        <textarea
+          name="comment"
+          placeholder=""
+          class="textarea-style"
+          rows="5"
+          required
+          minlength="2"
+        ></textarea>
+      </label>
 
-    <button type="submit" class="modal-button-send">Send</button>
-  </form>
+      <button type="submit" class="modal-button-send">Send</button>
+    </form>
+  </div>
 </div>
