--- a/src/partials/modal-recipe.html
+++ b/src/partials/modal-recipe.html
@@ -108,7 +108,7 @@
   <div class="add-rating-modal" id="rating-modal" data-hidden>
     <button class="add-rating-close-btn">
       <svg class="add-rating-close-img">
-        <use href="../img/symbol-defs.svg#icon-cross"></use>
+        <use href="./img/symbol-defs.svg#icon-cross"></use>
       </svg>
     </button>
     <h3 class="add-rating-title">Rating</h3>
