--- a/src/css/hero-home.css
+++ b/src/css/hero-home.css
@@ -26,6 +26,9 @@
   background-color: transparent;
   transition: background-color var(--trans), color var(--trans);
   }
+  .dark .hero-btn {
+    color: var(--white-color);
+  }
   
   .hero-btn:hover,
   .hero-btn:focus {
