--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
       <a class="header-link-nav header-link-home" href="./index.html">Home</a>
         </li>
         <li class="header-nav">
-          <a class="header-link-na header-link-favorites" href="./favorites.html">Favorites</a>
+          <a class="header-link-nav header-link-favorites" href="./favorites.html">Favorites</a>
         </li>
       </ul>
     <a class="header-logo" href="./index.html"><span class="header-logo-acent">tasty</span>treats.</a>
@@ -23,7 +23,7 @@
 </div>
 
 <label class="checkbox-ios-desktop">
-  <input type="checkbox">
+  <input class="checkbox-btn" type="checkbox" >
   <span class="checkbox-ios-switch"></span>
 </label>
 
