--- a/src/partials/favorit-images.html
+++ b/src/partials/favorit-images.html
@@ -17,3 +17,4 @@
         you like
         to your favorites for easier access in the future.</p>
 </section>
+<div id="tui-pagination-container" class="tui-pagination"></div>
