--- a/src/css/base.css
+++ b/src/css/base.css
@@ -27,16 +27,22 @@ h5,
 h6,
 p {
   margin: 0;
+
 }
 .dark h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p{
-    color:  var(--dark-description-font-color) ;
+.dark h2,
+.dark h3,
+.dark h4,
+.dark h5,
+.dark h6
+{
+    color:  var(--white-color) ;
   }
+
+
+.dark p{
+  color: var(--dark-description-font-color);
+}
 ul,
 ol {
   margin: 0;
