--- a/src/css/base.css
+++ b/src/css/base.css
@@ -49,10 +49,10 @@ ol {
   padding: 0;
   list-style: none;
 }
-.dark ul,
+/* .dark ul,
 ol{
     color:  var(--dark-description-font-color) ;
-  }
+  } */
 a {
   color: currentColor;
   text-decoration: none;
