Adds to top button

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,3 +9,5 @@
 @import url('./modal-rating.css');
 @import url('./modal-recipe.css');
 @import url('./favorit-images.css');
+
+@import url('./to-top-button.css');
