--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,57 +1,61 @@
 <div class="container">
-    <div class="header">
-      <ul class="nav-header-list">
-        <li class="header-nav">
-      <a class="header-link-nav header-link-home" href="./index.html">Home</a>
-        </li>
-        <li class="header-nav">
-          <a class="header-link-nav header-link-favorites" href="./favorites.html">Favorites</a>
-        </li>
-      </ul>
-    <a class="header-logo" href="./index.html"><span class="header-logo-acent">tasty</span>treats.</a>
-    <div class="header-wrap">
-        <button type="button" class="header-icon-order-basket-btn">
-<svg class="header-icon-order-basket" width="24" height="24">
-    <use href="./img/symbol-defs.svg#icon-order-basket"></use>
-</svg>
-</button>
-<button type="button" class="header-icon-burger-btn">
-<svg class="header-icon-burger js-open-menu" width="32" height="32">
-    <use href="./img/symbol-defs.svg#icon-burger"></use>
-</svg>
-</button>
-</div>
-
-<label class="checkbox-ios-desktop">
-  <input class="checkbox-btn" type="checkbox" >
-  <span class="checkbox-ios-switch"></span>
-</label>
-
-</div>
-<div>
-    <div class="mobile-menu js-menu-container" id="mobile-menu">
-        <div class="container mobile-menu-container">
-            <button class="mobile-menu-close-btn js-close-menu">
-                <svg class="mobile-menu-close-icon" width="28" height="28">
-                  <use href="./img/symbol-defs.svg#icon-cross"></use>
-                </svg>
-              </button>
-    <ul class="list icon-mobile-menu">
-      <li class="mobile-menu-home">
-<a class="header-link-home" href="./index.html">Home</a>
+  <div class="header" id="header">
+    <ul class="nav-header-list">
+      <li class="header-nav">
+        <a class="header-link-nav header-link-home" href="./index.html">Home</a>
       </li>
-      <li class="mobile-menu-favorites">
-        <a class="header-link-favorites" href="./favorites.html">Favorites</a>
+      <li class="header-nav">
+        <a class="header-link-nav header-link-favorites" href="./favorites.html"
+          >Favorites</a
+        >
       </li>
     </ul>
-    <label class="checkbox-ios">
-        <input type="checkbox">
-        <span class="checkbox-ios-switch"></span>
+    <a class="header-logo" href="./index.html"
+      ><span class="header-logo-acent">tasty</span>treats.</a
+    >
+    <div class="header-wrap">
+      <button type="button" class="header-icon-order-basket-btn">
+        <svg class="header-icon-order-basket" width="24" height="24">
+          <use href="./img/symbol-defs.svg#icon-order-basket"></use>
+        </svg>
+      </button>
+      <button type="button" class="header-icon-burger-btn">
+        <svg class="header-icon-burger js-open-menu" width="32" height="32">
+          <use href="./img/symbol-defs.svg#icon-burger"></use>
+        </svg>
+      </button>
+    </div>
+
+    <label class="checkbox-ios-desktop">
+      <input class="checkbox-btn" type="checkbox" />
+      <span class="checkbox-ios-switch"></span>
     </label>
-</div>
-</div>
+  </div>
+  <div>
+    <div class="mobile-menu js-menu-container" id="mobile-menu">
+      <div class="container mobile-menu-container">
+        <button class="mobile-menu-close-btn js-close-menu">
+          <svg class="mobile-menu-close-icon" width="28" height="28">
+            <use href="./img/symbol-defs.svg#icon-cross"></use>
+          </svg>
+        </button>
+        <ul class="list icon-mobile-menu">
+          <li class="mobile-menu-home">
+            <a class="header-link-home" href="./index.html">Home</a>
+          </li>
+          <li class="mobile-menu-favorites">
+            <a class="header-link-favorites" href="./favorites.html"
+              >Favorites</a
+            >
+          </li>
+        </ul>
+        <label class="checkbox-ios">
+          <input type="checkbox" />
+          <span class="checkbox-ios-switch"></span>
+        </label>
+      </div>
+    </div>
   </div>
 </div>
 
 <!-- ---------------------------------------------------------------TABLET AND DESKTOP -->
-
